--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "kormich/lab3",
     "autoload": {
         "psr-4": {
-            "my\\": "src/"
+            "my\\": "src/",
+            "UnitTests\\": "tests/"
         }
     },
     "authors": [
@@ -14,6 +15,10 @@
     "require": {
         "fakerphp/faker": "^1.23",
         "symfony/polyfill-uuid": "^1.28",
-        "ramsey/uuid": "^4.7"
+        "ramsey/uuid": "^4.7",
+        "ext-pdo": "*"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^10.5"
     }
 }
