--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "fakerphp/faker": "^1.23",
         "symfony/polyfill-uuid": "^1.28",
         "ramsey/uuid": "^4.7",
-        "ext-pdo": "*"
+        "ext-pdo": "*",
+        "symfony/http-foundation": "^7.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.5"
