--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "autoload": {
         "psr-4": {
             "my\\": "src/",
-            "UnitTests\\": "tests/"
+            "UnitTests\\": "tests/",
+            "http\\": "http/"
         }
     },
     "authors": [
@@ -17,7 +18,8 @@
         "symfony/polyfill-uuid": "^1.28",
         "ramsey/uuid": "^4.7",
         "ext-pdo": "*",
-        "symfony/http-foundation": "^7.0"
+        "symfony/http-foundation": "^7.0",
+        "psr/container": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.5"
