--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "ramsey/uuid": "^4.7",
         "ext-pdo": "*",
         "symfony/http-foundation": "^7.0",
-        "psr/container": "^2.0"
+        "psr/container": "^2.0",
+        "vlucas/phpdotenv": "^5.6"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.5"
